crates/dollet-core/src/output/snapshots/dollet_core__output__hdhr__tests__device_xml_document.snap
---
source: crates/dollet-core/src/output/hdhr.rs
expression: "device_xml(\"http://ipx.test/hdhr\", &Identity::new(None, None))"
---
<?xml version="1.0" encoding="utf-8"?>
        <root>
            <DeviceID>12345678</DeviceID>
            <FriendlyName>Dollet HDHomeRun</FriendlyName>
            <ModelNumber>HDTC-2US</ModelNumber>
            <FirmwareName>hdhomerun3_atsc</FirmwareName>
            <FirmwareVersion>20200101</FirmwareVersion>
            <DeviceAuth>test_auth_token</DeviceAuth>
            <BaseURL>http://ipx.test/hdhr</BaseURL>
            <LineupURL>http://ipx.test/hdhr/lineup.json</LineupURL>
        </root>
