crates/dollet-core/src/output/snapshots/dollet_core__output__hdhr__tests__discover_json.snap
---
source: crates/dollet-core/src/output/hdhr.rs
expression: "discover(\"http://ipx.test/hdhr\", &identity, 4)"
---
{
  "FriendlyName": "Dollet HDHomeRun",
  "ModelNumber": "HDTC-2US",
  "FirmwareName": "hdhomerun3_atsc",
  "FirmwareVersion": "20200101",
  "DeviceID": "12345678",
  "DeviceAuth": "test_auth_token",
  "BaseURL": "http://ipx.test/hdhr",
  "LineupURL": "http://ipx.test/hdhr/lineup.json",
  "TunerCount": 4
}
