crates/dollet-core/src/output/snapshots/dollet_core__output__hdhr__tests__lineup_status_json.snap
---
source: crates/dollet-core/src/output/hdhr.rs
expression: lineup_status()
---
{
  "ScanInProgress": 0,
  "ScanPossible": 0,
  "Source": "Cable",
  "SourceList": [
    "Cable"
  ]
}
